feature: connect font and backend for log ascent
